# eta_utility

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.gitlab/: Dockerfile  changelog_config.yml  update_release_mr_description.sh
.gitlab/docker/: build_and_push_docker.bat  build_and_push_docker.sh  dockerfile  pyjulia-39-19.dockerfile
.gitlab/issue_templates/: mytemplate.md
.gitlab/merge_request_templates/: merge request template.md
.gitlab/python/3.9/: Dockerfile
docs/: conf.py  index.rst
docs/connectors/: ENTSO-E_Connection.rst  EnEffco_Connection.rst  Modbus_connection.rst  OpcUa_connection.rst  connectors.rst  emonio.rst  eneffco.rst  forecast_solar_connection.rst  introduction.rst  live_connect.rst  modbus.rst  opcua.rst  rest.rst  wetterdienst_connection.rst
docs/eta_x/: agents.rst  common_functions.rst  control_algorithms.rst  envs.rst  eta_x.rst  introduction.rst  mpc_basic.rst  nsga2.rst  rule_based.rst  sb3_extensions.rst
docs/eta_x/figures/: ETA-X Konzept Grafiken.pptx
docs/examples/: examples.rst
docs/guide/: development.rst  faq.rst  install.rst  python_install.rst
docs/servers/: opcua.rst
docs/simulators/: fmu.rst
docs/timeseries/: timeseries.rst
docs/util/: util.rst
eta_utility/: __init__.py  util.py  util_julia.py
eta_utility/connectors/: __init__.py  base_classes.py  common.py  cumulocity.py  emonio.py  eneffco.py  entso_e.py  forecast_solar.py  live_connect.py  modbus.py  node.py  opc_ua.py  opcua.py  rest.py  sub_handlers.py  util.py  wetterdienst.py  wetterdienst_connection.py
eta_utility/eta_x/: __init__.py  config.py  eta_x.py
eta_utility/eta_x/agents/: __init__.py  math_solver.py  mpc_basic.py  nsga2.py  rule_based.py
eta_utility/eta_x/agents/common/: __init__.py  concurrent.py  multi_vec_env.py  policies.py
eta_utility/eta_x/agents/mpc_basic/: __init__.py  mpc_basic.py
eta_utility/eta_x/agents/nsga2/: nsga2.py
eta_utility/eta_x/agents/rule_based/: __init__.py  base_classes.py
eta_utility/eta_x/common/: MySchedules.py  __init__.py  advanced_extractors.py  common.py  policies.py  schedules.py
eta_utility/eta_x/envs/: __init__.py  action_spaces.py  base_classes.py  base_env.py  base_env_live.py  base_env_live_connector.py  base_env_mpc.py  base_env_sim.py  config_spaces.py  julia_env.py  no_vec_env.py  obs_spaces.py  state.py  state_config.py
eta_utility/ju_extensions/: Manifest.toml  Project.toml
eta_utility/ju_extensions/test/: runtests.jl
eta_utility/plotter/: __init__.py  plotter.py
eta_utility/servers/: __init__.py  modbus.py  opc_ua.py  opcua.py
eta_utility/simulators/: __init__.py  fmu.py
eta_utility/timeseries/: __init__.py  dataframes.py  scenarios.py
eta_utility/type_hints/: __init__.py  custom_types.py  types_connectors.py  types_eta_x.py
examples/connectors/: cumulocity_examples.py  data_recorder.py  read_emonio_live.py  read_series_entsoe.py  read_series_wetterdienst.py
examples/cyber_physical_system/environment/: CleaningMachine.fmu  env_connected.py  env_simulation.py
examples/damped_oscillator/: controller.py  damped_oscillator.fmu  damped_oscillator.json  damped_oscillator.py  damped_oscillator_conventional.json  main.py
examples/forecasting/: main.py
examples/forecasting/resources/: emag_gt_forecast.onnx
examples/pendulum/: controller.py  main.py  pendulum.py  pendulum_conventional.json  pendulum_learning.json
pip-wheel-metadata/eta_utility.dist-info/: LICENSE  METADATA
test/: config_local_dummy.py  config_tests.py  conftest.py  flask_test_server.py  logins_empty.py  test_combi_connect.py  test_connectors_common.py  test_connectors_eneffco.py  test_connectors_entsoe.py  test_connectors_live.py  test_connectors_modbus.py  test_connectors_opcua.py  test_connectors_rest.py  test_etax.py  test_etax_baseenv_legacy.py  test_examples_connectors.py  test_examples_eta_x.py  test_fmu.py  test_simulators_fmu.py  test_sub_handlers.py  test_util.py
test/resources/agents/: Nsga2Env.jl  rule_based.py
test/resources/config/: config1.json  config2.toml  config3.yaml  config_python.py
test/resources/damped_oscillator/: damped_oscillator.fmu
test/test_connectors/: test_connectors_util.py  test_cumulocity.py  test_emonio.py  test_eneffco.py  test_entsoe.py  test_forecast_solar.py  test_live_connect.py  test_modbus.py  test_multi_connect.py  test_node.py  test_opcua.py  test_sub_handlers.py  test_wetterdienst.py
test/test_etax/: test_agents.py  test_baseenv.py  test_baseenv_legacy.py  test_config.py  test_etax.py  test_state.py
test/test_etax/controller/: simple_control.py
test/test_etax/environment/: pendulum.py
test/test_examples/: test_connectors.py  test_eta_x.py
test/test_resources/: pendulum_conventional.json  test_excel_node_list.xls  test_fmu.fmu
test/test_resources/damped_oscillator/: damped_oscillator.json  damped_oscillator.py
test/test_resources/etax/config/: damped_oscillator.json  pendulum_conventional.json
test/test_resources/etax/controller/: damped_oscillator_control.py  pendulum_control.py
test/test_resources/etax/environment/: damped_oscillator.py  pendulum.py
test/test_resources/pendulum/: pendulum.json  pendulum.py
test/test_servers/: test_modbus.py  test_opcua.py
test/test_simulators/: test_fmu.py
test/test_timeseries/: test_dataframes.py
test/test_utilities/: utility_test_connectors_modbus.py  utility_test_connectors_opcua.py
test/test_utilities/etax/: __init__.py  util.py
test/test_utilities/opcua/: client.py
test/test_utilities/pyModbusTCP/: client.py  nodes.py
test/test_utilities/pyOPCUA/: client.py  nodes.py
test/test_utilities/requests/: eneffco_request.py
test/utilities/requests/: cumulocity_request.py  eneffco_request.py  forecast_solar_full_data.json  forecast_solar_request.py
test/utilities/requests/forecast_solar_samples/: forecast_solar_sample0.json  forecast_solar_sample1.json  forecast_solar_sample10.json  forecast_solar_sample11.json  forecast_solar_sample12.json  (+15 more)
(+4 files in other folders)
