[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
include = "\\.pyi?$|eta_utility/*|test/*"
exclude = "\\.xlsx?$"
line_length = 120
target_version = ["py36","py37","py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flakehell]
format = "colored"
show_source = true
extended_default_ignore=[]
exclude = [
    ".git",
    "__pycache__",
    "docs/conf.py",
    "build",
    "dist",
]
max_line_length = 120

[tool.flakehell.plugins]
pycodestyle = ["+*", "-E203", "-W503", "--max_line_length=120"]
pyflakes = ["+*", "-D203"]
max-complexity = 20

[tool.flakehell.exceptions."test/"]
pycodestyle = ["-*"]
pyflakes = ["-*"]

[tool.flakehell.exceptions."*/__init__.py"]
pyflakes = ["-F401"]

[tool.pytest.ini_options]
addopts = "--cov-config=pyproject.toml"
testpaths = [
    "test",
]

[tool.coverage.run]
source = [
    "eta_utility"
]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/docs/*",
    "*/build/*",
    "*/dist/*",
]
