[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
include = "\\.pyi?$|^eta_utility/|^test/"
exclude = "\\.xlsx?$|\\.fmu?$|test_resources/|__pycache__/"
line_length = 120
target_version = ["py36","py37","py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flakehell]
format = "colored"
show_source = true
extended_default_ignore = []
exclude = [
    ".git",
    "__pycache__",
    "docs/conf.py",
    "build",
    "dist",
]
max_line_length = 120

[tool.flakehell.plugins]
pycodestyle = ["+*", "-E203", "-W503", "--max_line_length=120"]
pyflakes = ["+*", "-D203"]
flake8-builtins = ["+*"]
flake8-eradicate = ["+*"]
flake8-comprehensions = ["+*"]
flake8-mutable = ["+*"]
flake8-print = ["+*"]
flake8-pytest-style = ["+*"]
flake8-requirements = ["+*"]
pep8-naming = ["+*"]
flake8-rst-docstrings = ["+*"]
flake8-pytest = ["+*"]
# No annotations for *args, **kwargs, self and cls required:
flake8-annotations = ["+*", "-ANN002", "-ANN003", "-ANN101", "-ANN102"]
flake8-typing-imports = ["+*"]
# Simplify can give interesting hints, consider enabling in the future:
flake8-simplify = ["-*"]

max-complexity = 20

[tool.flakehell.exceptions."test/"]
flake8-annotations = ["-*"]

[tool.flakehell.exceptions."*/__init__.py"]
pyflakes = ["-F401"]

[tool.pytest.ini_options]
addopts = "--cov-config=pyproject.toml"
testpaths = [
    "test",
]

[tool.coverage.run]
source = [
    "eta_utility"
]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/docs/*",
    "*/build/*",
    "*/dist/*",
]
