[metadata]
name = eta_utility
version = 1.3
author = ETA-Fabrik
author_email = info@eta-fabrik.de
url = eta-fabrik.de
description = ETA-Fabrik utility functions for connections, servers and simulations
long_description = file: README.md
keywords = utility functions, connectors, servers, simulators
license =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    opcua
    cryptography
    numpy
    pandas
    xlrd<2.0.0
    requests
    fmpy>=0.3.5
    nptyping
    python-dateutil
    pyModbusTCP

[options.extras_require]
ETA_X =
    gym
    stable_baselines3
    tensorboard
    pyomo<6
    mmh3

DEVELOP =
    # Repeat requirements from ETA_X
    gym
    stable_baselines3
    tensorboard
    pyomo
    mmh3
    # Specific requirements for development
    sphinx
    sphinx_rtd_theme
    pre-commit
    pytest
    pytest-cov
    black
    blacken-docs
    isort
    pyupgrade
    # MyPy requirements and typing packages
    mypy
    types-python-dateutil
    types-requests
    # Linting / Flake8 requirements and linting packages
    flake8
    pyflakes
    pycodestyle
    flake8-builtins
    flake8-eradicate
    flake8-comprehensions
    flake8-mutable
    flake8-print
    flake8-pytest-style
    flake8-requirements
    pep8-naming
    flake8-rst-docstrings
    flake8-typing-imports
    # Could be inserted as a future requirement
    # flake8-simplify

[options.package_data]
* = *.md


[options.packages.find]
include =
    eta_utilit*
exclude =
    test*

[flake8]
format = default
show_source = true
extend_exclude =
    docs/conf.py,
    build,
    dist
max_line_length = 120
indent_size = 4
extend_ignore =
    E203
    W503
    D203
    # Some ReST keywords are specific to sphinx and will not be recognized correctly:
    RST304
    # Warnings about fixtures without return values are broken:
    PT019
per_file_ignores =
    __init__.py: F401
max_complexity = 20
