[metadata]
name = eta_utility
author = Technical University of Darmstadt, Institute for Production Management, Technology and Machine Tools (PTW).
author_email = info@ptw.tu-darmstadt.de
url = https://www.ptw.tu-darmstadt.de
project_urls =
    Documentation=https://eta-utility.readthedocs.io/
    Source=https://github.com/PTW-TUDa/eta_utility/
    Issues=https://git.ptw.maschinenbau.tu-darmstadt.de/eta-fabrik/public/eta-utility/-/issues
description = A framework for researching energy optimization of factory operations
long_description = file: README.rst, LICENSE
long_description_content_type: text/x-rst
keywords = connectors,servers,simulators,industrial energy optimization,rolling horizon optimization
license = BSD 2-Clause License
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Manufacturing
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
# We're using some functionality from python 3.7 (therefore this is the minimum)
# and pytorch does not support Versions >3.9 (therefore this is the maximum).
python_requires = >=3.7<=3.9
install_requires =
    attrs
    python-dateutil
    numpy
    pandas
    xlrd
    lxml
    requests
    opcua
    pyModbusTCP==0.2.0
    cryptography
    # Lower versions of fmpy have problems with setting parameters during initialization:
    fmpy>=0.3.5

[options.extras_require]
ETA_X =
    gym
    torch
    stable_baselines3<1.6
    tensorboard
    # The MPCBasic agent currently does not support pyomo version 6:
    pyomo<6

EXAMPLES =
    # Requirements for the examples
    matplotlib
    keyboard
    pygame
    pyglet
    onnxruntime

DEVELOP =
    # Repeat requirements from ETA_X
    gym
    torch
    stable_baselines3<1.6
    tensorboard
    pyomo<6
    # Repeat requirements for the examples
    matplotlib
    keyboard
    pygame
    pyglet
    onnxruntime
    # Specific requirements for tests
    pytest
    pytest-cov
    openpyxl
    # Specific requirements for development
    sphinx
    sphinx_rtd_theme
    pre-commit
    black==22.6
    blacken-docs
    isort
    pyupgrade
    # MyPy requirements and typing packages
    mypy==0.961
    types-python-dateutil
    types-requests
    # Linting / Flake8 requirements and linting packages
    flake8==4.0.1
    pyflakes
    pycodestyle
    flake8-builtins
    flake8-eradicate
    flake8-comprehensions
    flake8-mutable
    flake8-print
    flake8-pytest-style
    flake8-requirements
    pep8-naming
    flake8-rst-docstrings
    # Could be inserted as a future requirement
    # flake8-simplify


[options.package_data]
eta_utility = py.typed

[options.packages.find]
include = eta_utility*
exclude =
    test*
    docs*
    examples*

[flake8]
format = default
show_source = true
extend_exclude =
    docs/conf.py,
    build,
    dist
max_line_length = 120
indent_size = 4
extend_ignore =
    E203
    W503
    D203
    # Some ReST keywords are specific to sphinx and will not be recognized correctly:
    RST303
    RST304
    # Warnings about fixtures without return values are broken:
    PT019
per_file_ignores =
    __init__.py: F401
max_complexity = 20
